--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,15 @@
 }
 
 .App-header {
-  background-color: #222;
   padding: 20px;
   color: white;
+}
+
+.App-search {
+  background: white;
+  opacity: 0.5;
+  border-radius: 5px;
+  color: black;
+  padding: 8px;
+  display: block;
 }
